--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Spicy+Rice&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap');
 
 body {
 
-    font-family: 'Spicy Rice', cursive;
+    
     background-color: #251749;
 
 
 }
 .titulo {
     color:rgb(230, 35, 35);
-    font-size: 60px;
-    
+    font-size: 80px;
+    font-family: 'Spicy Rice', cursive;
+    margin: 20px;
 
 }
 
 .subtitulo {
 
    color:rgb(230, 35,35);
-   font-size: 32px;
-   
+   font-size: 34px;
+   font-family: 'Poppins', sans-serif;
 
 
     
@@ -61,6 +63,7 @@ body {
     align-content: center;
     flex-direction: column-reverse;
     align-items: center;
+    font-family: 'Poppins', sans-serif;
 
 
 }
@@ -91,18 +94,44 @@ input {
     padding: 10px;
     margin: 30px;
     border-radius: 10px;
-    font-family: 'Spicy Rice', cursive;
+    font-family: 'Poppins', sans-serif;
     font-size: 19px;
 
 }
 
 
-/* SEGUNDA PANTALLA */
-
-
 #seleccionar-ataque {
 
-    display: flex;
+    
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+.botones-ataque {
+
+    background-color: #6F1AB6;
+    height: 50px;
+    width: 160px;
+    border-radius: 10px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 25px;
+    margin: 10px;
+    color: rgb(230, 35,35);
+}
+
+.informacion-vidas {
+
+    font-family: 'Poppins', sans-serif;
+    font-size: 25px;
+    
+   
+
+    
+}
 
 
+#informacion-vidas-enemigo {
+
+    margin-top: 5px;/*  */
 }
