--- a/styles.css
+++ b/styles.css
@@ -75,8 +75,9 @@ body {
 
 }
 
-input {
+input{
     display: none;
+    
 
 }
 
@@ -120,18 +121,47 @@ input {
     color: rgb(230, 35,35);
 }
 
-.informacion-vidas {
-
-    font-family: 'Poppins', sans-serif;
-    font-size: 25px;
+.mensajes {
     
-   
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: greenyellow;
+    font-family: 'Poppins', sans-serif;
+    font-size: 24px;
+    width: 280px;
+    border-radius: 20px;
+    border: 3px solid black;
+    margin-top:20px;
+    
+    
 
     
 }
 
 
+.informacion-vidas {
+
+    font-family: 'Poppins', sans-serif;
+    font-size: 25px;
+    
+
+    
+}
+
+
+#boton-reiniciar {
+
+    border: none;
+    color:rgb(230, 35, 35);
+    font-family: 'Poppins', sans-serif;
+    background-color: transparent;
+
+
+}
+
+
 #informacion-vidas-enemigo {
 
-    margin-top: 5px;/*  */
+    margin-top: 5px;
 }
