--- a/styles.css
+++ b/styles.css
@@ -2,49 +2,41 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap');
 
-body {
-
-    
+body { 
     background-color: #251749;
-     font-family: 'Poppins', sans-serif;
-
-
+    font-family: 'Poppins', sans-serif;
 }
 .titulo {
     color:rgb(230, 35, 35);
-    font-size: 80px;
+    font-size: 60px;
     font-family: 'Spicy Rice', cursive;
     margin: 20px;
-
 }
 
 .subtitulo {
-
    color:rgb(230, 35,35);
    font-size: 34px;
-   font-family: 'Poppins', sans-serif;
-
-
-    
+   font-family: 'Poppins', sans-serif;   
 }
 
 #seleccionar-mascota {
-
     display: flex ;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
-    
-
+    align-items: center;   
 } 
 
 .tarjetas, .grupo-botones-ataque {
    
     display: flex;
     gap: 20px;
-    
-    
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    width: 70%;
+    justify-content: center;
 }
+    
 
 
 .tarjeta-de-mokepon {
@@ -161,6 +153,14 @@ input:checked + label  {
     align-items: center;
 }
 
+#ver-mapa {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+#mapa {
+    border: 2px solid white; 
+}
 @media (max-width:664px){
     .tarjetas {
         flex-direction: column;  
